# Antilatency.Copilot

./: CMakeLists.txt  LICENSE.md  README.md
AntilatencySdk/: LICENSE.txt  README.md  hash.txt  request.json
AntilatencySdk/Api/: Antilatency.Alt.Environment.HorizontalGrid.h  Antilatency.Alt.Environment.Selector.h  Antilatency.Alt.Environment.h  Antilatency.Alt.Tracking.h  Antilatency.Api.h  Antilatency.DeviceNetwork.Interop.h  Antilatency.DeviceNetwork.h  Antilatency.InterfaceContract.LibraryLoader.Qt.h  Antilatency.InterfaceContract.LibraryLoader.Unix.h  Antilatency.InterfaceContract.LibraryLoader.Uwp.h  Antilatency.InterfaceContract.LibraryLoader.Win32.h  Antilatency.Math.h
Src/: CMakeLists.txt  main.cpp
Src/Copilot/: Application.cpp  Application.h  CMakeLists.txt  CopilotAction.cpp  CopilotAction.h  CopilotAngles.cpp  CopilotAngles.h  CopilotMath.cpp  CopilotMath.h  FeederPX4.cpp  FeederPX4.h  PX4.cpp  PX4.h  PrintTrackingStateApplication.cpp  PrintTrackingStateApplication.h  TargetLanding.cpp  TargetLanding.h  TargetLandingApplication.cpp  TargetLandingApplication.h  TrackingForCopilot.cpp  TrackingForCopilot.h
